

public abstract class AMenu {
}
