
public abstract class Media {
}
