

public class StreamingPlatform {
    //..
}
